--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,45 @@
----
-import Layout from '../layouts/Layout.astro';
----
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Renata Torres</title>
+  </head>
+  <body class="font-sans">
+    <!-- Hero Section -->
+    <section class="relative bg-cover bg-center h-screen flex items-center justify-center text-white" 
+      style="background-image: url('/assets/hero-1.jpg');">
+      
+      <!-- Overlay para melhorar contraste
+      <div class="absolute inset-0 bg-gradient-to-b from-transparent to-black opacity-70"></div> -->
 
-<Layout title="Renata Torres">
-  <section style="text-align: center; background: #720D0D; color: white;">
-    <h1>Estamos em manutenção</h1>
-</Layout>
+      <!-- Conteúdo -->
+      <div class="relative z-10 px-4 text-center">
+        <!-- Background Image Behind Logo -->
+        <div class="absolute inset-0 flex justify-center items-center">
+          <div 
+            class="bg-contain bg-no-repeat bg-center h-full w-56 mt-2 mb-[20%]"
+            style="background-image: url('/assets/image2.png');">
+          </div>
+        </div>
+
+        <!-- Logo -->
+        <img src="/assets/icons/logo.svg" alt="Renata Torres Logo" class="mx-auto mb-2 mt-80 w-64 relative z-30" />
+
+        <!-- Title -->
+        <h2 class="text-3xl font-light mb-2 relative z-30">Lorem ipsum dolor</h2>
+
+        <!-- Text -->
+        <p class="text-lg mb-8 max-w-2xl mx-auto relative z-30">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.
+        </p>
+
+        <!-- Button -->
+        <a
+          href="#"
+          class="bg-yellow-500 text-black py-3 px-8 rounded-full text-xl font-semibold transition-all hover:bg-yellow-400 relative z-30"
+        >
+          Button
+        </a>
+      </div>
+    </section>
+  </body>
+</html>
