--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,11 @@
+---
+import Analytics from '@vercel/analytics/astro'
+---
+
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
+    <Analytics />
     <title>Renata Torres</title>
   </head>
   <body class="font-sans">
