--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ import Analytics from '@vercel/analytics/astro'
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<Analytics />
-		<title>Renata Torres</title>
+		<title>Teste</title>
 	</head>
 	<body>
 		<slot />
