--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,11 @@
----
-import Analytics from '@vercel/analytics/astro'
----
-
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <Analytics />
-    <title>Renata Torres</title>
-  </head>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<meta name="generator" content={Astro.generator} />
+		<title>Teste</title>
+	</head>
   <body class="font-sans">
     <!-- Hero Section -->
     <section class="relative bg-cover bg-center h-screen flex items-center justify-center text-white" 
