--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,14 @@
+---
+import '../styles/global.css';
+import Analytics from '@vercel/analytics/astro'
+---
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+    <Analytics />
 		<title>Teste</title>
 	</head>
   <body class="font-sans">
