--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Analytics from '@vercel/analytics/astro'
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
     <Analytics />
-		<title>Teste</title>
+		<title>Renata Torres</title>
 	</head>
   <body class="font-sans">
     <!-- Hero Section -->
