--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,19 +1,51 @@
 ---
+interface Props {
+	title: string;
+	description: string;
+	image: string;
+	url: string;
+}
+const { title, description, image, url } = Astro.props as Props;
 import '../styles/global.css';
 import Analytics from '@vercel/analytics/astro'
 ---
 
-<!doctype html>
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<Analytics />
-		<title>Teste</title>
+    <meta name="viewport" content="width=device-width" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    
+    <!-- SEO Básico -->
+    <title>{title}</title>
+    <meta name="description" content={description} />
+
+    <!-- Open Graph (Facebook, WhatsApp etc) -->
+    <meta property="og:title" content={title} />
+    <meta property="og:description" content={description} />
+    <meta property="og:image" content={image} />
+    <meta property="og:url" content={url} />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content={title} />
+    <meta name="twitter:description" content={description} />
+    <meta name="twitter:image" content={image} />
+    <meta name="twitter:url" content={url} />
+
+    <!-- Astro Generator -->
+    <meta name="generator" content={Astro.generator} />
+
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
+    
+    <!-- Vercel Analytics -->
+    <Analytics />
 	</head>
-	<body>
+  <body>
 		<slot />
-	</body>
+  </body>
 </html>
