--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,16 +9,17 @@ import Layout from '../layouts/Layout.astro';
   url="https://www.renatatorres.com">
 
   <main class="text-text">
-    <section id="hero" class="relative flex flex-col items-center justify-center h-screen bg-cover bg-center " style="background-image: url('/assets/bg.jpg');">
+    <section id="hero" class="relative flex flex-col items-center justify-center h-screen bg-cover bg-center 
+    bg-[url('/assets/bg-mobile.jpg')] xl:bg-[url('/assets/bg.jpg')]">
     <!-- <div class="absolute inset-0 bg-gradient-to-b from-transparent to-black opacity-70"></div> -->
-     <div class="flex flex-col items-center justify-center">
+     <div class="flex flex-col items-center justify-center mx-4">
       <div class="h-auto max-w-[14rem]">
          <img src="assets/image1.png" alt="Renata Torres" />
       </div>
        <div class="h-auto max-w-[18rem] mt-[-4rem]">
          <img src="/assets/icons/logo.svg" alt="Renata Torres Logo" />
        </div>
-       <div class="text-center text-sm mt-4 max-w-[40rem]">
+       <div class="text-center text-sm mx-4 mt-4 xl:mx-80">
          <p class="text-1xl xl:text-lg">
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.
          </p>
