--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import Button from '../components/button.astro';
 ---
 
 <Layout 
@@ -12,7 +13,7 @@ import Layout from '../layouts/Layout.astro';
     <section id="hero" class="relative flex flex-col items-center justify-center h-screen bg-cover bg-center 
     bg-[url('/assets/bg-mobile.jpg')] xl:bg-[url('/assets/bg.jpg')]">
     <!-- <div class="absolute inset-0 bg-gradient-to-b from-transparent to-black opacity-70"></div> -->
-     <div class="flex flex-col items-center justify-center mx-4">
+     <div class="flex flex-col items-center justify-center mx-4 xl:mt-0">
       <div class="h-auto max-w-[14rem]">
          <img src="assets/image1.png" alt="Renata Torres" />
       </div>
@@ -24,9 +25,15 @@ import Layout from '../layouts/Layout.astro';
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.
          </p>
        </div>
-       <a href="#">
-         Button
-       </a>
+       <Button />
+       <div class="flex items-center mt-4 space-x-4">
+        <div class="w-10 h-10 bg-[url('/assets/image2.jpg')] bg-cover bg-center rounded-full border-2 border-primary"></div>
+        <div class="text-xs">
+          <span class="block">Lorem ipsum</span>
+          <p>Lorem ipsum dolor</p>
+        </div>
+      </div>
+      
      </div>
     </section>
   </main>
