--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,24 +10,29 @@ import Layout from '../layouts/Layout.astro';
   url="https://www.renatatorres.com">
 
   <main class="text-text">
-    <section id="hero" class="relative flex flex-col items-center justify-center h-screen bg-cover bg-center 
-    bg-[url('/assets/bg-mobile.jpg')] xl:bg-[url('/assets/bg.jpg')]">
+    <section id="hero" class="relative flex flex-col items-center justify-center h-screen bg-cover bg-center bg-[url('/assets/bg-mobile.jpg')] xl:bg-[url('/assets/bg.jpg')]">
     <!-- <div class="absolute inset-0 bg-gradient-to-b from-transparent to-black opacity-70"></div> -->
-     <div class="flex flex-col items-center justify-center mx-4 xl:mt-0">
+    <div class="flex flex-col items-center justify-center mx-4 xl:mt-0">
       <div class="h-auto max-w-[14rem]">
-         <img src="assets/image1.png" alt="Renata Torres" />
+        <img src="assets/image1.png" alt="Renata Torres" />
       </div>
-       <div class="h-auto max-w-[18rem] mt-[-4rem]">
-         <img src="/assets/icons/logo.svg" alt="Renata Torres Logo" />
-       </div>
-       <div class="text-center text-sm mx-4 mt-4 xl:mx-80">
-         <p class="text-1xl xl:text-lg">
-           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.
-         </p>
-       </div>
-       <Button />
-       <div class="flex items-center mt-4 space-x-4">
-        <div class="w-10 h-10 bg-[url('/assets/image2.jpg')] bg-cover bg-center rounded-full border-2 border-primary"></div>
+      <div class="h-auto max-w-[18rem] mt-[-4rem]">
+        <img src="/assets/icons/logo.svg" alt="Renata Torres Logo" />
+      </div>
+      <div class="text-center text-sm mx-4 mt-4 xl:mx-80">
+        <p class="text-1xl xl:text-lg">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.
+        </p>
+      </div>
+      <div>
+        <a href="#" class="block w-fit rounded-lg px-12 py-2.5 mt-8 text-sm bg-primary text-card shadow-lg shadow-primary/50 hover:text-text hover:bg-card transition duration-300 ease-in-out hover:shadow-xl hover:shadow-primary/50">
+          <span class="#">Lorem ipsum dolor</span>
+        </a>
+      </div>
+
+      <div class="flex items-center mt-4 space-x-4">
+        <div class="w-10 h-10 bg-[url('/assets/image2.jpg')] bg-cover bg-center rounded-full border-2 border-primary">
+        </div>
         <div class="text-xs">
           <span class="block">Lorem ipsum</span>
           <p>Lorem ipsum dolor</p>
