--- a/src/components/cardsection1.astro
+++ b/src/components/cardsection1.astro
@@ -1,4 +1,4 @@
 <div class="text-sm xl:text-base text-text">
-  <img class="w-10" src="/public/assets/icons/star.svg" alt="Icon">
+  <img class="w-10" src="/assets/icons/star.svg" alt="Icon">
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe beatae aperiam reprehenderit.</p>
 </div>
