--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Button from '../components/button.astro';
+import Button from '../components/btn.astro';
 import Cardsection1 from '../components/cardsection1.astro';
 import Layout from '../layouts/Layout.astro';
 ---
@@ -33,9 +33,7 @@ import Layout from '../layouts/Layout.astro';
         </p>
       </div>
       <div>
-        <a href="#" class="block w-fit rounded-lg px-12 py-2.5 mt-8 text-sm bg-primary text-card shadow-lg shadow-primary/50 hover:text-text hover:bg-card transition duration-300 ease-in-out hover:shadow-xl hover:shadow-primary/50">
-          <span class="#">Lorem ipsum dolor</span>
-        </a>
+        <Button />
       </div>
 
       <div class="flex items-center mt-4 space-x-4">
