--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,38 +49,26 @@ import Layout from '../layouts/Layout.astro';
 
     <section id="section-2" class="py-16 bg-background">
       <div class="flex flex-col items-center justify-center mb-8 text-justify mx-4 xl:mx-80">
-        <div class="flex flex-col items-center justify-center mb-8 border-2 border-primary rounded-2xl p-4 mx-4 xl:mx-auto max-w-4xl xl:flex-row xl:space-x-8">
+        
+        <div id="card-icon" class="flex flex-col items-center justify-center mb-8 border-2 border-primary rounded-2xl p-4 mx-4 xl:mx-auto max-w-4xl xl:flex-row xl:space-x-8">
           <Cardsection1 />
           <Cardsection1 />
           <Cardsection1 />
         </div>
 
-        <div class="flex flex-col items-center justify-center mb-4 p-2 mx-4 xl:mx-auto max-w-4xl xl:flex-row xl:space-x-8">
-          <div>
-            <h3>Loren, ipsum</h3>
-            <h2>Lorem, ipsum dolor sit amet</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium cupiditate, nisi vitae odit saepe ipsam alias necessitatibus quae similique nostrum sequi quo esse delectus at, mollitia deserunt porro aliquid adipisci.
-            </p>
+        <div id="text-img" class="flex flex-col-reverse gap-4 items-center justify-center mb-4 p-2 mx-4 xl:mx-auto max-w-4xl xl:flex-row xl:space-x-8">
+          <div id="title" class="flex flex-col items-center justify-center">
+            <div>
+              <h3>Loren, ipsum</h3>
+              <h2>Lorem, ipsum dolor sit amet</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium cupiditate, nisi vitae odit saepe ipsam alias necessitatibus quae similique nostrum sequi quo esse delectus at, mollitia deserunt porro aliquid adipisci.
+              </p>
+            </div>
+            <Button />
           </div>
-          <div>
-            <img class="border-[0.5rem] border-img rounded-xl max-w-52" src="/assets/image3.png" alt="">
-          </div>
+          <img class="border-[0.5rem] border-img rounded-xl max-w-52" src="/assets/image3.png" alt="">
         </div>
-      </div>
-      <div class="text-center mx-4 xl:mx-80">
-        <h2 class="text-3xl font-semibold mb-4">Próxima Seção</h2>
-        <p class="text-lg mb-6">
-          Curabitur pretium tincidunt lacus. Nulla gravida orci a odio. Nullam varius, turpis et commodo pharetra, est eros bibendum elit, nec luctus magna felis sollicitudin mauris.
-        </p>
-        <a href="#" class="block w-fit rounded-lg px-12 py-2.5 text-sm bg-primary text-card shadow-lg shadow-primary/50 hover:text-text hover:bg-card transition duration-300 ease-in-out hover:shadow-xl hover:shadow-primary/50">
-          <span class="#">Saiba Mais</span>
-        </a>
-      </div>
-      <div class="mt-12 flex justify-center space-x-8">
-        <div class="w-16 h-16 bg-[url('/assets/image3.jpg')] bg-cover bg-center rounded-full border-4 border-primary"></div>
-        <div class="w-16 h-16 bg-[url('/assets/image4.jpg')] bg-cover bg-center rounded-full border-4 border-primary"></div>
-        <div class="w-16 h-16 bg-[url('/assets/image5.jpg')] bg-cover bg-center rounded-full border-4 border-primary"></div>
       </div>
     </section>
   </main>
