--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
+import Section_4 from '../components/Section_4.astro';
 import Button from '../components/btn.astro';
+import Card from '../components/card.astro';
 import Cardsection1 from '../components/cardsection1.astro';
 import Layout from '../layouts/Layout.astro';
 ---
@@ -10,7 +12,7 @@ import Layout from '../layouts/Layout.astro';
   image="/assets/hero-1.jpg" 
   url="https://www.renatatorres.com">
 
-  <main class="text-text bg-background">
+  <main class="text-text bg-background pb-12">
     
     <section id="hero" class="relative flex flex-col items-center justify-center h-screen bg-cover bg-center bg-[url('/assets/bg-mobile.jpg')] xl:bg-[url('/assets/bg.jpg')] pb-8">
     <!-- <div class="absolute inset-0 bg-gradient-to-b from-transparent to-black opacity-70"></div> -->
@@ -71,6 +73,27 @@ import Layout from '../layouts/Layout.astro';
         </div>
       </div>
     </section>
+
+    <section id="section-3" class="#">
+      <div class="gap-2 flex flex-col items-center justify-center mb-8 p-2 mx-4 xl:mx-auto max-w-4xl">
+        <div id="title-2" class="flex flex-col items-center justify-center text-justify xl:mx-auto max-w-4xl">
+          <h2>Loren, ipsum</h2>
+          <p>Lorem ipsum dolor, sit amet</p>
+        </div>
+        <div class="grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-2 gap-8 xl:mx-auto max-w-4xl">
+          <Card />
+          <Card />
+          <Card />
+          <Card />
+        </div>
+      </div>
+    </section>
+
+    <section id="section-4" class="#">
+      <Section_4 />
+
+    </section>
+
   </main>
   
 </Layout>
