--- a/src/pages/Section_4.astro
+++ b/src/pages/Section_4.astro
@@ -1,4 +1,4 @@
-<div class="relative rounded-lg border-8 border-img flex flex-col items-center justify-center mx-4 xl:mx-auto max-w-3xl mt-32">
+<section id="section-4" class="relative rounded-lg border-8 border-img flex flex-col items-center justify-center mx-4 xl:mx-auto max-w-3xl mt-32">
   
   <img class="absolute right-0 bottom-0 w-48" src="/assets/image4.png" alt="Image">
   
@@ -11,4 +11,4 @@
       </p>
     </div>
   </div>
-</div>
+</section>
