--- a/src/pages/Section_5.astro
+++ b/src/pages/Section_5.astro
@@ -2,7 +2,7 @@
 import Tag from "../components/Tag.astro";
 ---
 
-<div class="flex items-center justify-center mt-16">
+<section id="section-5" class="flex items-center justify-center mt-16">
   <div class="flex items-center max-w-2xl gap-4">
     <div class="">
       <h2>Loren, ipsum</h2>
@@ -15,4 +15,4 @@ import Tag from "../components/Tag.astro";
         <Tag class="items-center" />
       </div>
     </div>
-</div>
+  </section>
