--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import Layout from '../layouts/Layout.astro';
   image="/assets/hero-1.jpg" 
   url="https://www.renatatorres.com">
 
-  <main class="text-text bg-background pb-12">
+  <main class="text-text bg-background">
     
     <Section_1 />
 
