--- a/src/pages/section_9.astro
+++ b/src/pages/section_9.astro
@@ -1,1 +1,4 @@
-<h1>Section 9</h1>
+<footer class="flex flex-col items-center justify-center p-4 bg-card mt-16 mx-auto gap-1">
+  <h2>Lorem ipsum</h2>
+  <p>In this section, we will summarize the key.</p>
+</footer>
