--- a/src/pages/section_6.astro
+++ b/src/pages/section_6.astro
@@ -2,7 +2,7 @@
 import Button from "../components/Button.astro";
 ---
 
-<section>
+<section id="section-6">
   <div class="py-12">
     <div id="text-img" class="flex flex-col-reverse gap-4 items-center justify-between mb-4 mx-4 xl:mx-auto max-w-3xl xl:flex-row-reverse">
       <div id="title" class="flex flex-col items-center justify-center">
