--- a/src/pages/section_8.astro
+++ b/src/pages/section_8.astro
@@ -2,7 +2,7 @@
 import Contact from "../components/contact.astro";
 ---
 
-<section id="section-8" class="flex flex-row items-center justify-center mt-4 xl:max-w-3xl mx-auto gap-4">
+<section id="section-8" class="flex flex-col xl:flex-row items-center justify-center mt-4 xl:max-w-3xl mx-auto gap-4">
   <div>
     <h2>Loren, ipsum</h2>
     <p class="text-text">
