--- a/src/pages/Section_5.astro
+++ b/src/pages/Section_5.astro
@@ -2,8 +2,8 @@
 import Tag from "../components/Tag.astro";
 ---
 
-<section id="section-5" class="flex items-center justify-center mt-16">
-  <div class="flex items-center max-w-2xl gap-4">
+<section id="section-5" class="flex flex-col xl:flex-row items-center justify-center mx-4 mt-24 gap-4">
+  <div class="flex flex-col-reverse xl:flex-row items-center max-w-2xl gap-12 mx-auto">
     <div class="">
       <h2>Loren, ipsum</h2>
       <p class="text-text">
@@ -11,7 +11,7 @@ import Tag from "../components/Tag.astro";
       </p>
     </div>
     <div class="relative">
-      <div class="w-24 h-auto">
+      <div class="w-32 h-auto">
         <Tag class="items-center" />
       </div>
     </div>
