--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import Layout from '../layouts/Layout.astro';
   image="/assets/hero-1.jpg" 
   url="https://www.renatatorres.com">
 
-  <main class="text-text bg-background w-full max-w-full box-border justify-center items-center">
+  <main class="text-text bg-background w-full max-w-full box-border justify-center items-center overflow-hidden">
     
     <Section_1 />
 
