--- a/src/pages/Section_4.astro
+++ b/src/pages/Section_4.astro
@@ -1,12 +1,12 @@
-<section id="section-4" class="relative rounded-lg border-8 border-img flex flex-col items-center justify-center mx-4 xl:mx-auto max-w-3xl mt-32">
+<section id="section-4" class="relative rounded-lg xl:border-8 border-img flex flex-col items-center justify-center mx-0 xl:mx-auto max-w-3xl mt-32">
   
-  <img class="absolute right-0 bottom-0 w-48" src="/assets/image4.png" alt="Image">
+  <img class="absolute -right-16 xl:right-0 bottom-0 w-64 xl:w-48" src="/assets/image4.png" alt="Image">
   
-  <div class="bg-primary w-full h-full rounded-md flex items-center justify-center p-8">
-    <div class="w-full">
-      <span class="text-2xl font-semibold text-background max-w-full">Lorem ipsum dolor sit amet</span>
+  <div class="bg-primary w-full h-full rounded-md flex items-start justify-start p-8">
+    <div class="max-w-full pr-24 xl:pr-0">
+      <span class="text-2xl font-semibold text-background xl:max-w-full">Lorem ipsum dolor sit amet</span>
 
-      <p class="text-red-600 max-w-lg mt-4">
+      <p class="text-background max-w-lg mt-4">
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Egestas in dui dictumst duis malesuada platea turpis rhoncus. Lorem ipsum dolor sit amet consectetur. Egestas in dui dictumst duis malesuada platea turpis rhoncus.
       </p>
     </div>
