--- a/src/pages/Section_4.astro
+++ b/src/pages/Section_4.astro
@@ -1,9 +1,9 @@
-<section id="section-4" class="relative rounded-lg xl:border-8 border-img flex flex-col items-center justify-center mx-0 xl:mx-auto max-w-3xl mt-32">
+<section id="section-4" class="xl:block hidden relative rounded-lg xl:border-8 border-img flex-col items-center justify-center mx-0 xl:mx-auto max-w-3xl mt-52 xl:mt-24">
   
-  <img class="absolute -right-16 xl:right-0 bottom-0 w-64 xl:w-48" src="/assets/image4.png" alt="Image">
+  <img class="absolute xl:right-0 bottom-0 w-60 xl:w-48" src="/assets/image4.png" alt="Image">
   
-  <div class="bg-primary w-full h-full rounded-md flex items-start justify-start p-8">
-    <div class="max-w-full pr-24 xl:pr-0">
+  <div class="bg-primary w-full xl:h-full h-48 xl:rounded-md flex items-start justify-start p-8">
+    <div class="max-w-full">
       <span class="text-2xl font-semibold text-background xl:max-w-full">Lorem ipsum dolor sit amet</span>
 
       <p class="text-background max-w-lg mt-4">
@@ -11,4 +11,5 @@
       </p>
     </div>
   </div>
+  
 </section>
