--- a/src/pages/section_7.astro
+++ b/src/pages/section_7.astro
@@ -1,14 +1,12 @@
 ---
 import Faq from "../components/faq.astro";
+import TitleFaqs from "../components/title_faqs.astro";
 ---
 
 <section id="section-7" class="pb-4">
   <div class="gap-2 flex flex-col items-center justify-center mb-8 mx-4 xl:mx-auto max-w-3xl">
 
-    <div id="title-2" class="flex flex-col items-center justify-center text-justify xl:mx-auto max-w-4xl mb-8">
-      <h2 class="text-3xl font-semibold text-center">Loren, ipsum</h2>
-      <p class="text-lg text-center text-text">Lorem ipsum dolor, sit amet</p>
-    </div>
+    <TitleFaqs />
 
     <div id="faqs" class="w-full space-y-4">
       <Faq 
