--- a/src/pages/section_9.astro
+++ b/src/pages/section_9.astro
@@ -1,4 +1,4 @@
 <footer class="flex flex-col items-center justify-center p-4 bg-card mt-16 mx-auto gap-1">
-  <h2>Lorem ipsum</h2>
-  <p>In this section, we will summarize the key.</p>
+  <h2>© 2025 Todos os direitos reservados</h2>
+  <p>Desenvolvido com 💻 e ☕ por Felipe R.</p>
 </footer>
