--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,8 +2,9 @@
 import Section_1 from './section_1.astro';
 import Section_2 from './section_2.astro';
 import Section_3 from './section_3.astro';
-import Section_4 from './Section_4.astro';
-import Section_5 from './Section_5.astro';
+import Section_4 from './section_4.astro';
+import Section_4_Mobile from './section_4_mobile.astro';
+import Section_5 from './section_5.astro';
 import Section_6 from './section_6.astro';
 import Section_7 from './section_7.astro';
 import Section_8 from './section_8.astro';
@@ -26,6 +27,8 @@ import Layout from '../layouts/Layout.astro';
     <Section_3 />
 
     <Section_4 />
+
+    <Section_4_Mobile />
 
     <Section_5 />
 
