--- a/src/pages/section_mobile.astro
+++ b/src/pages/section_mobile.astro
@@ -2,7 +2,7 @@
   
   <div class="w-full h-full flex items-end justify-center">
     <img class="absolute w-60 " src="/assets/image4.png" alt="Image">
-    <div class="bg-primary w-full h-48">      
+    <div class="bg-card w-full h-48">      
     </div>
   </div>
 
