--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Section_1 from './section_1.astro';
 import Section_2 from './section_2.astro';
 import Section_3 from './section_3.astro';
-import Section_4 from './section_4.astro';
+import Section_4 from './section4.astro';
 import Section_5 from './section_5.astro';
 import Section_6 from './section_6.astro';
 import Section_7 from './section_7.astro';
