--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,13 @@
 ---
-import Section_1 from './section_1.astro';
-import Section_2 from './section_2.astro';
-import Section_3 from './section_3.astro';
+import Section_1 from './section1.astro';
+import Section_2 from './section2.astro';
+import Section_3 from './section3.astro';
 import Section_4 from './section4.astro';
-import Section_5 from './section_5.astro';
-import Section_6 from './section_6.astro';
-import Section_7 from './section_7.astro';
-import Section_8 from './section_8.astro';
-import Section_9 from './section_9.astro';
+import Section_5 from './section5.astro';
+import Section_6 from './section6.astro';
+import Section_7 from './section7.astro';
+import Section_8 from './section8.astro';
+import Section_9 from './section9.astro';
 import Section_Mobile from './section_mobile.astro';
 import Layout from '../layouts/Layout.astro';
 ---
