--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,3 +1,7 @@
-<a href="#" class="block w-fit rounded-lg px-12 py-2.5 mt-8 text-sm bg-primary text-card shadow-lg shadow-primary/50 hover:text-text hover:bg-card transition duration-300 ease-in-out hover:shadow-xl hover:shadow-primary/50">
-  <span class="#">Lorem ipsum dolor</span>
+---
+const { span } = Astro.props;
+---
+
+<a href="https://api.whatsapp.com/send?phone=5587988674049&amp;text=Ol%C3%A1,%20gostaria%20de%20saber%20mais!." target="_blank" rel="noopener" class="block w-fit rounded-lg px-8 py-2.5 mt-8 text-sm bg-primary text-card shadow-lg shadow-primary/50 hover:text-text hover:bg-card transition duration-300 ease-in-out hover:shadow-xl hover:shadow-primary/50">
+  <span class="#">{ span }</span>
 </a>
