--- a/src/pages/section2.astro
+++ b/src/pages/section2.astro
@@ -21,7 +21,7 @@ import Cardsection1 from "../components/cardsection1.astro";
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium cupiditate, nisi vitae odit saepe ipsam alias necessitatibus quae similique nostrum sequi quo esse delectus at, mollitia deserunt porro aliquid adipisci.
           </p>
         </div>
-        <Button />
+        <Button span="Solicite sua consultoria"/>
       </div>
       <img class="border-[0.5rem] border-img rounded-xl max-w-52" src="/assets/image3.png" alt="">
     </div>
