--- a/src/pages/section6.astro
+++ b/src/pages/section6.astro
@@ -13,7 +13,7 @@ import Button from "../components/Button.astro";
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium cupiditate, nisi vitae odit saepe ipsam alias necessitatibus quae similique nostrum sequi quo esse delectus at, mollitia deserunt porro aliquid adipisci.
           </p>
         </div>
-        <Button />
+        <Button span="Falar com Especialista"/>
       </div>
       <img class="border-[0.5rem] border-img rounded-xl max-w-52" src="/assets/image3.png" alt="">
     </div>
