--- a/src/pages/section9.astro
+++ b/src/pages/section9.astro
@@ -1,4 +1,4 @@
 <footer class="flex flex-col items-center justify-center p-4 bg-card mt-16 mx-auto gap-1">
-  <h2>© 2025 Todos os direitos reservados</h2>
-  <p>Desenvolvido com 💻 e ☕ por Felipe R.</p>
+  <h2 class="text-sm">&copy; 2025 Todos os direitos reservados</h2>
+  <p class="text-sm font-thin">Desenvolvido com 💻 e ☕ por <span class="font-normal text-text"><a href="https://www.ramosdev.site/">Felipe R.</a></span></p>
 </footer>
