--- a/src/pages/section1.astro
+++ b/src/pages/section1.astro
@@ -25,7 +25,7 @@ import Tag from "../components/Tag.astro";
       </p>
     </div>
     <div>
-      <Button />
+      <Button span="Entrar em contato agora"/>
     </div>
 
     <div class="flex items-center mt-4 space-x-4">
