--- a/src/pages/section8.astro
+++ b/src/pages/section8.astro
@@ -10,7 +10,7 @@ import Contact from "../components/contact.astro";
     </p>
   </div>
   <Contact img="./assets/icons/contact.svg" title="Loren, ipsum"
-  content="Lorem, ipsum dolor sit amet consectetur adipisicing elit." url="#"/>
+  content="Lorem, ipsum dolor sit amet consectetur adipisicing elit." url="https://api.whatsapp.com/send?phone=5587988674049&amp;text=Ol%C3%A1,%20gostaria%20de%20saber%20mais!."/>
   <Contact img="./assets/icons/email.svg" title="Loren, ipsum"
-  content="Lorem, ipsum dolor sit amet consectetur adipisicing elit." url="#"/>
+  content="Lorem, ipsum dolor sit amet consectetur adipisicing elit." url="mailto:renatatorres.advogada@gmail.com"/>
 </section>
